<?xml version="1.0"?>
<package format="2">
    <name>dense</name>
	<version>0.0.0</version>
	<description>The dense package</description>
	<maintainer email="ariel.dalessandro@gmail.com">Ariel D'Alessandro</maintainer>
	<license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>cv_bridge</depend>
	<depend>pcl_ros</depend>
	<depend>message_filters</depend>
	<depend>image_geometry</depend>
	<depend>image_features</depend>
	<depend>tf2</depend>
	<depend>tf2_geometry_msgs</depend>
	<depend>tf2_ros</depend>
	<depend>robot_localization</depend>
	<depend>cmake_modules</depend>
	<depend>nodelet</depend>

    <export>
	    <nodelet plugin="${prefix}/dense_plugin.xml" />
	</export>

</package>
